Correction of an uneven block. He could sometimes have a different width

--- a/src/components/TicketCard/TicketCard.scss
+++ b/src/components/TicketCard/TicketCard.scss
@@ -16,12 +16,12 @@
         flex-direction: column;
         align-items: center;
 
-        flex-grow: 1;
+        width: 220px;
         border-right: 2px solid #ccc;
     }
 
     &__rightPanel {
-        flex-grow: 3;
+        flex-grow: 1;
         display: flex;
         flex-direction: column;
         padding: 10px;
